--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("/pics/bg.png") no-repeat center/cover;
+    background: url("/pics/bankBg.jpg") no-repeat center/cover;
     gap: 1.5%;
 }
 
@@ -82,12 +82,12 @@
 
 .container form #button{
     border: none;
-    background: #fff;
+    background-color: #6c6cde;
     border-radius: 5px;
     margin-top: 20px;
     font-weight: 600;
     font-size: 20px;
-    color: #333;
+    color: #fff;
     width: 100px;
     padding: 0;
     margin-right: 500px;
